--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "sendinblue/api-v3-sdk": "^8.0",
         "fakerphp/faker": "^1.24",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
