--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "symfony/http-client": "^7.2",
         "symfony/sendinblue-mailer": "^6.4",
         "fakerphp/faker": "^1.24",
         "laravel/framework": "^12.0",
