--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
-        "symfony/http-client": "^7.2",
-        "symfony/sendinblue-mailer": "^6.4",
+        "cloudinary/cloudinary_php": "^3.1",
         "fakerphp/faker": "^1.24",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^1.1",
-        "stripe/stripe-php": "^17.4"
+        "stripe/stripe-php": "^17.4",
+        "symfony/http-client": "^7.2",
+        "symfony/sendinblue-mailer": "^6.4"
     },
     "require-dev": {
         "laravel/breeze": "^2.3",
